--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,24 @@
       <artifactId>webdrivermanager</artifactId>
       <version>5.6.2</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context</artifactId>
+      <version>6.1.1</version>
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.yaml/snakeyaml -->
+    <dependency>
+      <groupId>org.yaml</groupId>
+      <artifactId>snakeyaml</artifactId>
+      <version>2.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-test</artifactId>
+      <version>6.1.1</version>
+      <scope>test</scope>
+    </dependency>
 
 
   </dependencies>
