--- a/pom.xml
+++ b/pom.xml
@@ -15,12 +15,16 @@
   </properties>
 
   <dependencies>
+
+    <!-- https://mvnrepository.com/artifact/junit/junit -->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <version>4.13.2</version>
       <scope>test</scope>
     </dependency>
+
+
 
     <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
     <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
@@ -43,11 +47,7 @@
       <artifactId>webdrivermanager</artifactId>
       <version>5.6.2</version>
     </dependency>
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-context</artifactId>
-      <version>6.1.1</version>
-    </dependency>
+
 
     <!-- https://mvnrepository.com/artifact/org.yaml/snakeyaml -->
     <dependency>
@@ -55,12 +55,13 @@
       <artifactId>snakeyaml</artifactId>
       <version>2.0</version>
     </dependency>
+
     <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-test</artifactId>
-      <version>6.1.1</version>
-      <scope>test</scope>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>1.2.17</version>
     </dependency>
+
 
 
   </dependencies>
@@ -72,6 +73,18 @@
         <configuration>
           <source>16</source>
           <target>16</target>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.22.2</version>
+        <configuration>
+          <suiteXmlFiles>
+            <suiteXmlFile>
+              src/test/resources/testng.xml
+            </suiteXmlFile>
+          </suiteXmlFiles>
         </configuration>
       </plugin>
     </plugins>
